# Blog

./: Cargo.toml  README.md  Rocket.toml
assets/css/: styles.css
src/: main.rs  post.rs
templates/: index.html.tera
