[package]
name = "blog"
version = "0.1.0"
authors = ["lukethayer <lukemanthayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["serde_derive"]}
serde_json = "1.0"
hyper = "0.13.8"
tokio = { version = "0.2.22", features=["macros"] }
url = "2.1.1"
rocket = "0.4.5"
rocket_contrib = {version = "0.4.5", features = ["json", "tera_templates"]}